@@ -247,6 +247,7 @@
 - P4A_Image::setSource() and getSource() methods were removed
 - P4A_Mask::addTempCss(), dropTempCss(), clearTempCss(), addJavascript(), dropJavascript(), addTempJavascript(), dropTempJavascript(), clearTempJavascript(), addCSS(), dropCSS() were removed
 - default and popup mask templates were broken in 3 files, now header and footer and manager by P4A and templates have only the body part
+- P4A::getPopupMaskName() and getPopupMask() methods were removed
 
 2.2.4
 - rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
